feat(api): add Query method along the RWLock double chain, improve internal state model to track `source_id` and `source_dir` more clearly
